# ParnetManagment

./: README.md
Frontend/Gearcomponents/NFTComponents/: MintNFT.tsx
Frontend/src/pages/home/: GridMenu.tsx  Home.tsx  Mint.tsx  MintNFT.tsx  MyNFT.tsx  ReadStateNFT.tsx  Transfer.tsx  Ventanas.tsx  projects.json
Smartcontracts/NFT/io/src/: lib.rs
Smartcontracts/Partner/: Cargo.toml  build.rs  partner.meta.txt  rust-toolchain.toml
Smartcontracts/Partner/io/: Cargo.toml
Smartcontracts/Partner/io/src/: lib.rs
Smartcontracts/Partner/src/: lib.rs
Smartcontracts/Partner/state/: Cargo.toml
Smartcontracts/Partner/state/src/: lib.rs
Smartcontracts/Partner/tests/: partner_test.rs
src/pages/home/: Home.tsx
